tests-integration/fixtures/checking/1781587680_typed_holes_constructors/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Yes :: Option
No :: Option
localOption :: Option
option :: Option
imported :: ImportedOption
select :: forall (@a :: Type). Select (a :: Type) => (a :: Type) -> Option
method :: forall (a :: Type). Select (a :: Type) => (a :: Type) -> Option

Types
Option :: Type
Select :: Type -> Constraint

Classes
class forall (a :: Type). Select (a :: Type)
  select :: forall (@a :: Type). Select (a :: Type) => (a :: Type) -> Option

Roles
Option = []

Diagnostics
error[TermHole]: Hole '?help' has inferred type: Option
  --> 11:10..11:15
   |
11 | option = ?help
   |          ^~~~~
error[TermHole]: Hole '?imported' has inferred type: ImportedOption
  --> 14:12..14:21
   |
14 | imported = ?imported
   |            ^~~~~~~~~
error[TermHole]: Hole '?method' has inferred type: (a :: Type) -> Option
  --> 20:10..20:17
   |
20 | method = ?method
   |          ^~~~~~~
